# hackoween-badge

./: README.md  hackoween-badge.kicad_pcb  hackoween-badge.kicad_prl  hackoween-badge.kicad_pro  hackoween-badge.kicad_sch
firmware/: Cargo.toml  rust-toolchain.toml
firmware/src/: main.rs
footprints/: LED_WS2812B_PLCC4_5.0x5.0mm_P3.2mm_Flipped.kicad_mod
